# acados-cpp-explore

./: .gitignore  CMakeLists.txt  README.md  acados_ocp.json  acados_sim.json  pybind_setup.md
c_generated_code/: CMakeLists.txt  acados_sim_solver_cartpole_model.h  main_sim_cartpole_model
c_generated_code/cartpole_model_model/: cartpole_model_impl_dae_fun.c  cartpole_model_impl_dae_fun_jac_x_xdot_u_z.c  cartpole_model_impl_dae_fun_jac_x_xdot_z.c  cartpole_model_impl_dae_jac_x_xdot_u_z.c
config/: base_options.yaml  model_params.yaml  ocp_params.yaml  sim_params.yaml
gen_code/: cartpoke_sim.py  cartpole_model.py  cartpole_ocp.py  control_sim.py  control_sim_bind.py  gen_ocp.py
gen_code/utils/: path_utils.py  plot_utils.py
include/c_generated_code_cartpole_model/: CMakeLists.txt  acados_solver_cartpole_model.c  acados_solver_cartpole_model.h  main_sim_cartpole_model
include/c_generated_code_cartpole_model/cartpole_model_cost/: cartpole_model_cost_y_0_fun.c  cartpole_model_cost_y_0_fun_jac_ut_xt.c  cartpole_model_cost_y_0_hess.c  cartpole_model_cost_y_e_fun.c  cartpole_model_cost_y_e_fun_jac_ut_xt.c  cartpole_model_cost_y_e_hess.c  cartpole_model_cost_y_fun.c  cartpole_model_cost_y_fun_jac_ut_xt.c  cartpole_model_cost_y_hess.c
include/c_generated_code_cartpole_model/cartpole_model_model/: cartpole_model_impl_dae_fun.c  cartpole_model_impl_dae_fun_jac_x_xdot_u.c  cartpole_model_impl_dae_fun_jac_x_xdot_u_z.c  cartpole_model_impl_dae_fun_jac_x_xdot_z.c  cartpole_model_impl_dae_jac_x_xdot_u_z.c  cartpole_model_model.h
include/c_generated_code_cartpole_model/install/: local_setup.sh  setup.sh
include/c_generated_code_cartpole_model/install/cartpole_model/: main_cartpole_model
include/c_generated_code_cartpole_model/install/cartpole_model/share/cartpole_model/: package.bash  package.zsh
include/c_generated_code_cartpole_model/log/: latest_build
scripts/: sim_cartpole.py
src/pybind_dummy_examples/: CMakeLists.txt  intro.cpp  intro.py  package.xml
src/pybind_dummy_examples/manual/: functions.md  intro.md  pybind_setup.md
src/rmpc/: CMakeLists.txt  package.xml
src/rmpc/include/c_generated_code_cartpole_model/: CMakeLists.txt  acados_ocp_cartpole_model.json  acados_sim_cartpole_model.json  acados_sim_solver.pxd  acados_sim_solver_cartpole_model.c  acados_solver.pxd  acados_solver_cartpole_model.c  acados_solver_cartpole_model.h  main_cartpole_model  main_cartpole_model.c  main_sim_cartpole_model  main_sim_cartpole_model.c
src/rmpc/include/c_generated_code_cartpole_model/cartpole_model_cost/: cartpole_model_cost.h  cartpole_model_cost_y_0_fun.c  cartpole_model_cost_y_0_fun_jac_ut_xt.c  cartpole_model_cost_y_0_hess.c  cartpole_model_cost_y_e_fun.c  cartpole_model_cost_y_e_fun_jac_ut_xt.c  cartpole_model_cost_y_e_hess.c  cartpole_model_cost_y_fun.c  cartpole_model_cost_y_fun_jac_ut_xt.c  cartpole_model_cost_y_hess.c
src/rmpc/include/c_generated_code_cartpole_model/cartpole_model_model/: cartpole_model_impl_dae_fun.c  cartpole_model_impl_dae_fun_jac_x_xdot_u.c  cartpole_model_impl_dae_fun_jac_x_xdot_u_z.c  cartpole_model_impl_dae_fun_jac_x_xdot_z.c  cartpole_model_impl_dae_jac_x_xdot_u_z.c
src/rmpc/include/rmpc/: rmpc.h  sim.h
src/rmpc/src/: bind_cpp.cpp  rmpc.cpp  run_control_sim.cpp  sim.cpp
